--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.14.20",
@@ -44,6 +45,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "firebase": "^10.11.0",
+    "framer-motion": "^12.23.24",
     "html-to-draftjs": "1.4.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -68,6 +70,7 @@
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.2",
+    "react-markdown": "^10.1.0",
     "react-multi-carousel": "2.8.5",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.0.2",
